--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,19 @@
     <string name="drawer_item_about_us">关于我们</string>
     <string name="drawer_item_system_setting">系统设置</string>
 
+    <!-- login -->
+    <string name="login_username_hint_text">user...name</string>
+    <string name="login_password_hint_text">pass...word</string>
+    <string name="login_button_text">Login</string>
+    <string name="register_button_text">Register</string>
+
+    <!-- register -->
+    <string name="top_hint_text">欢迎入驻邦邦社区--程序员的家</string>
+    <string name="register_user_name_hint_text">手机号码注册</string>
+    <string name="register_user_code_hint_text">验证码</string>
+    <string name="register_password_hint_text">请设置您的密码</string>
+    <string name="register_send_code_text">发送验证码</string>
+    <string name="register_sending_code_text">已发送...</string>
+
 
 </resources>
