完成后台用户信息更新接口，确认  登陆与用户信息功用表  login 完成Android端个人信息列表信息展示 完成用户头像和用户个人信息背景图片的上传操作
next 底部文字信息的更新设置
信息更新对界面的刷新操作（AndroidEventBus）
侧滑菜单的信息更新设置，如果头像依然不行，则换，自定义头部布局

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="register_password_hint_text">请设置您的密码</string>
     <string name="register_send_code_text">发送验证码</string>
     <string name="register_sending_code_text">已发送...</string>
+    <string name="title_activity_my_message">MyMessageActivity</string>
 
 
 </resources>
