完成用户信息修改界面相关逻辑
next
搭建服务器信息更改接口
信息更改后的相关更新UI逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="register_send_code_text">发送验证码</string>
     <string name="register_sending_code_text">已发送...</string>
     <string name="title_activity_my_message">MyMessageActivity</string>
+    <string name="title_activity_edit_message">EditMessageActivity</string>
 
 
 </resources>
