完成基本聊天集成～～～
next
聊天功能完善，界面优化
服务器聊天系统集成
好友添加逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="register_sending_code_text">已发送...</string>
     <string name="title_activity_my_message">MyMessageActivity</string>
     <string name="title_activity_edit_message">EditMessageActivity</string>
+    <string name="title_activity_conversation">ConversationActivity</string>
 
 
 </resources>
